--- a/.gitignore
+++ b/.gitignore
@@ -397,3 +397,10 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 *.idea
+
+NodeParser/*.manifest
+NodeParser/ritoclient.json
+NodeParser/valorant.json
+NodeParser/assets/
+NodeParser/files/
+NodeParser/Game/
