--- a/ValoParser/ValoParser.csproj
+++ b/ValoParser/ValoParser.csproj
@@ -25,8 +25,15 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="CliWrap" Version="3.5.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
       <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Valnet">
+        <HintPath>ValNet.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
