--- a/ValoParser/ValoParser.csproj
+++ b/ValoParser/ValoParser.csproj
@@ -16,13 +16,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\CUE4Parse-Conversion\CUE4Parse-Conversion.csproj" />
-      <ProjectReference Include="..\CUE4Parse\CUE4Parse.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
       <PackageReference Include="CliWrap" Version="3.5.0" />
+      <PackageReference Include="CUE4Parse" Version="1.0.9" />
+      <PackageReference Include="CUE4Parse-Conversion" Version="1.0.9" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="SkiaSharp" Version="2.88.6" />
       <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
     </ItemGroup>
 
